<resources>
    <string name="app_name">Practica22</string>
    <string name="password">Contraseña</string>
    <string name="user">Usuario</string>
    <string name="btnEntrar">ENTRAR</string>
    <string name="btnMedicion">MEDICION DE TEMPERATURA</string>
    <string name="btnConversor">CONVERSOR</string>
    <string name="btnConfiguracion">CONFIGURACION</string>
    <string name="btnCerraSesion">CERRAR SESION</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="temperatura">TEMPERATURA</string>
    <string name="poblacion">Poblacion</string>
    <string name="provincia">Provincia</string>
    <string name="rbCelsius">Celsius</string>
    <string name="rbFahrenheit">Fahrenheit</string>
    <string name="btnMenu">MENU</string>
    <string name="btnGuardar">Guardar</string>
</resources>